# openclaw-odoo

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  config.example.json  pyproject.toml
.github/workflows/: test.yml
src/openclaw_odoo/: __init__.py  auto_actions.py  batch.py  client.py  config.py  discovery.py  errors.py  fields.py  registry.py  retry.py
src/openclaw_odoo/intelligence/: analytics.py  error_recovery.py  file_import.py  smart_actions.py
src/openclaw_odoo/interfaces/: cli.py  mcp_server.py  openclaw_skill.py
src/openclaw_odoo/modules/: accounting.py  calendar_mod.py  crm.py  hr.py  inventory.py  partners.py  projects.py  purchase.py  sales.py
src/openclaw_odoo/realtime/: alerts.py  poller.py
tests/: test_auto_actions.py  test_batch.py  test_cli.py  test_client.py  test_config.py  test_core_config_fields_batch.py  test_discovery.py  test_errors.py  test_fields.py  test_integration.py  test_integration_live.py  test_json2.py  test_openclaw_skill.py  test_registry.py  test_retry.py  test_security_fixes.py
tests/test_intelligence/: test_analytics.py  test_error_recovery.py  test_file_import.py  test_smart_actions.py
tests/test_interfaces/: test_mcp.py
tests/test_modules/: test_accounting.py  test_calendar_mod.py  test_crm.py  test_hr.py  test_inventory.py  test_partners.py  test_projects.py  test_purchase.py  test_sales.py
tests/test_realtime/: test_alerts.py  test_poller.py
